[package]
name = "handmadehero-rust"
version = "0.1.0"
authors = ["a"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["winuser"] }
kernel32-sys = "0.2.1"
user32-sys = "0.2.0"