[package]
name = "handmadehero-rust"
version = "0.1.0"
authors = ["a"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser", "memoryapi", "libloaderapi", "xinput", "winerror", "profileapi", "dsound", "fileapi", "handleapi"] }