[package]
name = "handmadehero-rust"
version = "0.1.0"
authors = ["a"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["winuser", "memoryapi", "libloaderapi", "xinput", "winerror", "profileapi", "dsound", "fileapi", "handleapi", "synchapi", "timeapi", "winbase", ] }

[features]
default = ["handmade_internal"] # add "handmade_internal" for debug cfg defs to work
handmade_internal = []

[lib]
path = "src/handmade.rs"
name = "handmade"
src = "src/handmade.rs"
crate-type = ["rlib", "cdylib"] #cdylib to make handmade.rs callable from C 

[[bin]]
name = "win32_handmade"
path = "src/win32_handmade.rs"

[profile.dev]
# optimize dev builds needed to match hh performance ,  uncomment for visual studio debugger to work better
opt-level = 3